# gramine

./: .gitignore  .gitmodules  .mailmap  .pylintrc  .readthedocs.yaml  CHARTER.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Cargo.toml  LICENSE.addendum.txt  Makefile  README.rst  SECURITY.md  SECURITY.rst  a.sh  gramine.spec  meson.build  meson_options.txt  pytest.ini
CI-Examples/rust/: .gitignore  Cargo.toml  Makefile  README.md  rust-hyper-http-server.manifest.template  rust.manifest.template
CI-Examples/rust/.cargo/: config.toml
CI-Examples/rust/src/: main.rs
Pal/regression/: .gitignore  Bootstrap.c  Bootstrap3.manifest  Bootstrap3.manifest.template  Bootstrap6.manifest  Bootstrap6.manifest.template  Bootstrap7.manifest  Bootstrap7.manifest.template  Event.c  Exception.c  File.c  File.manifest  File.manifest.template  Makefile  Memory.c  Pipe.c  Process.c  Process3.c  Process3.manifest  Process3.manifest.template  Process4.c  Segment.c  Select.c  SendHandle.c  Socket.c  Tcp.c  Thread.c  Thread2.c  Thread2.manifest  Thread2.manifest.template  Thread2_exitless.manifest  Thread2_exitless.manifest.template  Udp.c  manifest.template  meson.build  pal_regression.h  printf_test.c  send_handle.c  test_pal.py  tests.toml  (+1 more)
Pal/src/: Makefile  db_exception.c  db_main.c  db_memory.c  db_misc.c  db_object.c  db_process.c  db_rtld.c  db_sockets.c  db_streams.c  db_threading.c  meson.build  pal-symbols  printf.c  slab.c
Runtime/: meson.build  pal_loader
Scripts/: Makefile  Makefile.Host  Makefile.Test  Makefile.configs  Makefile.rules  README  legacy-graphene-to-gramine  manifest.mk  meson.build  regression.py  run-cargo.sh  run-pytest
common/src/: Makefile  asan.c  avl_tree.c  generated-offsets-print.c  generated_offsets_print.c  meson.build  pal_error.c  path.c  path_utils.c  printf.c  socket_utils.c  string.c  string_utils.c  toml.patch  ubsan.c  unix_error.c
common/src/crypto/: config.h
common/src/https/: https.c  https.h  meson.build
common/src/ioctls/: ioctls.c  ioctls.h  meson.build
common/src/protected_files/: README.rst  lru_cache.c  lru_cache.h  meson.build  protected_files.c  protected_files.h  protected_files_format.h  protected_files_internal.h
common/src/stdlib/: printfmt.c
common/src/string/: atoi.c  ct_memcmp.S  ct_memcmp.c  ct_memcmp.nasm  ctype.c  memcmp.c  memcpy.c  memset.c  meson.build  toml_utils.c  util.c  utils.c
libos/: meson.build
libos/include/: generated-offsets.c  generated_offsets.c  gramine_hash.h.in  libos_checkpoint.h  libos_context.h  libos_defs.h  libos_flags_conv.h  libos_fs.h  libos_fs_encrypted.h  libos_fs_lock.h  libos_fs_mem.h  libos_fs_proc.h  libos_fs_pseudo.h  libos_handle.h  libos_internal.h  libos_ipc.h  libos_lock.h  libos_process.h  libos_refcount.h  libos_rwlock.h  libos_signal.h  libos_socket.h  libos_sync.h  libos_table.h  libos_tcb.h  libos_thread.h  libos_types.h  libos_utils.h  libos_vma.h  lru_composite_key_cache.h  meson.build  shim_checkpoint.h  shim_context.h  shim_entry.h  shim_fs.h  shim_fs_encrypted.h  shim_fs_lock.h  shim_fs_mem.h  shim_fs_proc.h  shim_fs_pseudo.h  (+14 more)
libos/include/linux_abi/: errors.h  fs.h  futex.h  ioctl.h  limits.h  memory.h  net.h  poll.h  process.h  random.h  sched.h  signals.h  sysinfo.h  time.h  timerfd.h  types.h
libos/src/: .gitignore  gramine_hash.c  libos_async.c  libos_call.c  libos_checkpoint.c  libos_debug.c  libos_init.c  libos_malloc.c  libos_object.c  libos_pal.c  libos_parser.c  libos_pollable_event.c  libos_rtld.c  libos_rwlock.c  libos_syscalls.c  libos_utils.c  meson.build  shim.map  shim_async.c  shim_call.c  shim_checkpoint.c  shim_debug.c  shim_init.c  shim_malloc.c  shim_object.c  shim_pollable_event.c  shim_rtld.c  shim_syscalls.c  shim_utils.c
libos/src/bookkeep/: libos_handle.c  libos_pid.c  libos_process.c  libos_signal.c  libos_thread.c  libos_vma.c  shim_handle.c  shim_pid.c  shim_process.c  shim_signal.c  shim_thread.c  shim_vma.c
libos/src/fs/: libos_dcache.c  libos_fs.c  libos_fs_encrypted.c  libos_fs_hash.c  libos_fs_lock.c  libos_fs_mem.c  libos_fs_path.c  (+15 more)
pal/: meson.build
pal/include/: meson.build  pal_internal.h  pal_rtld.h
pal/regression/: AttestationReport.c  Bootstrap.c  Bootstrap6.manifest.template  Bootstrap7.manifest.template  Directory.c  Event.c  Exception.c  Exception2.c  Exit.c  File.c  File.manifest.template  File2.c  HelloWorld.c  Hex.c  Memory.c  Misc.c  Pie.c  Pipe.c  Process.c  Process4.c  Segment.c  Symbols.c  Thread.c  Thread2.c  Thread2.manifest.template  Thread2_edmm.manifest.template  Thread2_exitless.manifest.template  avl_tree_test.c  ipv4_parser.c  ipv6_parser.c  libc_test.c  manifest.template  memory.c  memory_management.c  meson.build  normalize_path.c  pal_regression.h  printf_test.c  send_handle.c  strtoll_test.c  (+3 more)
pal/src/: db_events.c  db_exception.c  db_main.c  db_misc.c  db_object.c  db_process.c  db_rtld.c  db_sockets.c  db_streams.c  db_threading.c  meson.build  pal_elf.c  pal_events.c  pal_exception.c  pal_main.c  pal_memory.c  pal_misc.c  pal_object.c  pal_process.c  pal_rtld.c  pal_sockets.c  pal_streams.c  pal_symbols  pal_threading.c  printf.c  slab.c
python/: gramine-gen-depend  gramine-manifest  gramine-manifest-check  gramine-ratls-client  gramine-sgx-gen-private-key  gramine-sgx-get-measurements  gramine-sgx-get-token  gramine-sgx-show  gramine-sgx-sign  gramine-sgx-sigstruct-view  gramine-test  graphene-gen-depend  graphene-manifest  graphene-sgx-get-token  graphene-sgx-sign  meson.build
python/graminelibos/: __init__.py  aesm.proto  gen_jinja_env.py  manifest.py  manifest_check.py  meson.build  ratls_client.py  regression.py  sgx_get_token.py  sgx_sign.py  sigstruct.py  util_tests.py
python/graminelibos.dist-info/: METADATA.in  entry_points.txt  meson.build
python/graphenelibos/: __init__.py  manifest.py  meson.build  sgx_get_token.py  sgx_sign.py  sigstruct.py
tools/: argv_serializer.c  gramine-sed.sh  gramine.in  legacy-graphene-to-gramine  meson.build  vcs_tag.in
tools/common/: meson.build  util.h
tools/pf_crypt/: meson.build
tools/pf_tamper/: meson.build
tools/sgx/: meson.build
(+1610 files in other folders)
