option('direct', type: 'feature', value: 'disabled',
    description: 'Build and install gramine-direct (aka Linux aka nonsgx)')
option('sgx', type: 'feature', value: 'disabled',
    description: 'Build and install gramine-sgx (aka Linux-SGX)')
option('skeleton', type: 'feature', value: 'disabled',
    description: 'Build skeleton PAL')

option('libc', type: 'combo', choices: ['none', 'glibc', 'musl'],
    value: 'glibc', description: 'Choose (patched) libc that is to be built into runtime directory')

option('tests', type: 'feature', value: 'disabled',
    description: 'Build test binaries')

option('dcap', type: 'feature', value: 'disabled',
    description: 'Build additional utilities linked against DCAP library')
option('ubsan', type: 'feature', value: 'disabled',
    description: 'Enable undefined behavior sanitizer')
option('asan', type: 'feature', value: 'disabled',
    description: 'Enable address sanitizer (Clang only)')
option('libgomp', type: 'feature', value: 'disabled',
    description: 'Build patched libgomp (takes long time)')

option('sgx_driver', type: 'combo',
    choices: ['upstream', 'oot'],
    description: 'Flavour of the SGX driver')
option('sgx_driver_include_path', type: 'string',
    description: 'Path to SGX driver headers (default value depends on sgx_driver)')
option('sgx_driver_device', type: 'string',
    description: 'Path to "enclave" device in /dev (default value depends on sgx_driver)')

option('syslibdir', type: 'string',
    description: 'Path to the system library directory')

option('vtune', type: 'feature', value: 'disabled',
    description: 'Enable profiling with VTune for Gramine with SGX')
option('vtune_sdk_path', type: 'string',
    value: '/opt/intel/oneapi/vtune/latest/sdk',
    description: 'Path to the VTune SDK installation')
