option('dcap', type: 'feature',
    description: 'Build additional utilities linked against DCAP library')

# TODO: after deprecating 18.04/bionic, change these to type: 'feature'
option('direct', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build and install gramine-direct (aka Linux aka nonsgx)')
option('sgx', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build and install gramine-sgx (aka Linux-SGX)')
option('skeleton', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build skeleton PAL')

option('libc', type: 'combo', choices: ['none', 'glibc', 'musl'],
    value: 'glibc', description: 'Choose (patched) libc that is to be built into runtime directory')

option('tests', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build test binaries')

option('ubsan', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Enable undefined behavior sanitizer')
option('asan', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Enable address sanitizer (Clang only)')
option('libgomp', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build patched libgomp (takes long time)')

option('syslibdir', type: 'string',
    description: 'Path to the system library directory')

option('vtune', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Enable profiling with VTune for Gramine with SGX')
option('vtune_sdk_path', type: 'string',
    value: '/opt/intel/oneapi/vtune/latest/sdk',
    description: 'Path to the VTune SDK installation')
