# Copyright (C) 2023 Gramine contributors
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "rust-hyper-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
